--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   :root {
     --background: 229 84 5;
     --foreground: 0 0 100;
-    --card: 0 0% 100%;
+    --card: 215 25 27;
     --card-foreground: 222.2 84% 4.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
@@ -34,10 +34,15 @@
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
 
     width: 100vw;
     min-height: 100vh;
+  }
+
+  .small-caps {
+    font-variant-caps: small-caps;
   }
 }
