--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@
     --foreground: 0 0 100;
     --card: 215 25 27;
     --card-foreground: 222.2 84% 4.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
+    --popover: 215 25 27;
+    --popover-foreground: 214 32 91;
     --primary: 222.2 47.4% 11.2%;
     --primary-foreground: 210 40% 98%;
     --secondary: 210 40% 96.1%;
